add metric and imperial units

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -26,4 +26,9 @@
     <string name="wind">Ветер:</string>
     <string name="mm_hg">мм рт. ст.</string>
     <string name="m_s">м/с</string>
+
+    <string name="unit">система измерения</string>
+    <string name="choose_measure_system">Выберите систему измерения</string>
+    <string name="metric">метрическая</string>
+    <string name="imperial">имперская</string>
 </resources>
