--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="wind">Wind:</string>
     <string name="mm_hg">mm Hg</string>
     <string name="m_s">m/s</string>
+    <string name="delete">Delete</string>
 
     <string name="unit">unit</string>
     <string name="choose_measure_system">Choose measure system</string>
