init drawer layout

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -38,4 +38,6 @@
 
     <string name="search">Поиск</string>
     <string name="nothing_found">По заданному запросу ничего не найдено</string>
+    <string name="triggers">Триггеры</string>
+
 </resources>
