add text fields for time period input and delete btn in DetailTriggerFragment.kt

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -45,5 +45,8 @@
     <string name="temp">Температура</string>
     <string name="wind_speed">Скорость ветра</string>
     <string name="save">Сохранить</string>
+    <string name="date_start">Дата начала</string>
+    <string name="date_end">Дата конца</string>
+    <string name="humidity_detail">Влажность</string>
 
 </resources>
