--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,7 @@
     <string name="temp">Temperature</string>
     <string name="wind_speed">Wind speed</string>
     <string name="save">Save</string>
+    <string name="date_start">Start date</string>
+    <string name="date_end">End date</string>
+    <string name="humidity_detail">Humidity</string>
 </resources>
