--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -40,13 +40,14 @@
     <string name="nothing_found">По заданному запросу ничего не найдено</string>
 
     <string name="triggers">Триггеры</string>
-    <string name="trigger_name">Название триггера</string>
+    <string name="trigger_name">Название триггера (обязательное поле)</string>
     <string name="trigger_details_title">Параметры триггера</string>
-    <string name="temp">Температура</string>
+    <string name="temp">Температура (обязательное поле)</string>
     <string name="wind_speed">Скорость ветра</string>
     <string name="save">Сохранить</string>
     <string name="date_start">Дата начала</string>
     <string name="date_end">Дата конца</string>
     <string name="humidity_detail">Влажность</string>
+    <string name="required_fields">Пожалуйста, заполните обязательные поля.</string>
 
 </resources>
