implemented periodic requests with worker and showing notifications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,6 @@
     <string name="date_end">End date</string>
     <string name="humidity_detail">Humidity</string>
     <string name="required_fields">Please, fill required fields.</string>
+    <string name="default_notification_channel_id" translatable="false">alert_channel</string>
+    <string name="checking_for_updates">Checking for updates…</string>
 </resources>
