--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -49,5 +49,6 @@
     <string name="date_end">Дата конца</string>
     <string name="humidity_detail">Влажность</string>
     <string name="required_fields">Пожалуйста, заполните обязательные поля.</string>
+    <string name="checking_for_updates">Обновление данных…</string>
 
 </resources>
