--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="humidity_detail">Humidity</string>
     <string name="required_fields">Please, fill required fields.</string>
 
-    <string name="default_notification_channel_id" translatable="false">alert_channel</string>
+    <string name="default_notification_channel_id" translatable="false">alert_channel1</string>
+    <string name="silent_notification_channel_id" translatable="false">alert_channel2</string>
     <string name="checking_for_updates">Checking for updates…</string>
 </resources>
