creating trigger for particular location

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -43,6 +43,7 @@
     <string name="trigger_name">Название триггера (обязательное поле)</string>
     <string name="trigger_details_title">Параметры триггера</string>
     <string name="temp">Температура (обязательное поле)</string>
+    <string name="location_name_detail">Название локации (обязательное поле)</string>
     <string name="wind_speed">Скорость ветра</string>
     <string name="save">Сохранить</string>
     <string name="date_start">Дата начала</string>
@@ -50,6 +51,7 @@
     <string name="humidity_detail">Влажность</string>
     <string name="required_fields">Пожалуйста, заполните обязательные поля.</string>
     <string name="new_trigger">Новый триггер</string>
+    <string name="choose_location">Выберите локацию</string>
 
     <string name="checking_for_updates">Обновление данных…</string>
 </resources>
