--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,8 +54,10 @@
     <string name="humidity_detail">Humidity</string>
     <string name="required_fields">Please, fill all required fields.</string>
     <string name="new_trigger">New trigger</string>
+    <string name="choose_location">Choose a location</string>
 
     <string name="default_notification_channel_id" translatable="false">alert_channel1</string>
     <string name="silent_notification_channel_id" translatable="false">alert_channel2</string>
     <string name="checking_for_updates">Checking for updates…</string>
+    <string name="location_name_detail">Location name (required)</string>
 </resources>
